Import of BLBLACK/Class-C3-0.15_01 from CPAN.
gitpan-cpan-distribution: Class-C3
gitpan-cpan-version:      0.15_01
gitpan-cpan-path:         BLBLACK/Class-C3-0.15_01.tar.gz
gitpan-cpan-author:       BLBLACK
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Class-C3
-version: 0.14
+version: 0.15_01
 author:
   - 'Stevan Little, E<lt>stevan@iinteractive.comE<gt>'
   - 'Brandon L. Black, E<lt>blblack@gmail.comE<gt>'
@@ -9,16 +9,15 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
-  Algorithm::C3: 0.05
+  Algorithm::C3: 0.06
   Scalar::Util: 1.1
 build_requires:
-  Test::Exception: 0.15
   Test::More: 0.47
 provides:
   Class::C3:
     file: lib/Class/C3.pm
-    version: 0.14
-generated_by: Module::Build version 0.2805
+    version: 0.15_01
+generated_by: Module::Build version 0.2807
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
   version: 1.2
