--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Class-C3
-version: 0.15_01
+version: 0.15_02
 author:
   - 'Stevan Little, E<lt>stevan@iinteractive.comE<gt>'
   - 'Brandon L. Black, E<lt>blblack@gmail.comE<gt>'
@@ -13,10 +13,12 @@ requires:
   Scalar::Util: 1.1
 build_requires:
   Test::More: 0.47
+recommends:
+  Class::C3::XS: 0.02
 provides:
   Class::C3:
     file: lib/Class/C3.pm
-    version: 0.15_01
+    version: 0.15_02
 generated_by: Module::Build version 0.2807
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
