--- a/META.yml
+++ b/META.yml
@@ -1,25 +1,17 @@
----
-name: Class-C3
-version: 0.15_05
-author:
-  - 'Stevan Little, E<lt>stevan@iinteractive.comE<gt>'
-  - 'Brandon L. Black, E<lt>blblack@gmail.comE<gt>'
+--- 
 abstract: A pragma to use the C3 method resolution order algortihm
-license: perl
-resources:
-  license: http://dev.perl.org/licenses/
-requires:
-  Algorithm::C3: 0.06
-  Scalar::Util: 1.1
-build_requires:
+author: Stevan Little, <stevan@iinteractive.com>
+build_requires: 
   Test::More: 0.47
-recommends:
-  Class::C3::XS: 0.02
-provides:
-  Class::C3:
-    file: lib/Class/C3.pm
-    version: 0.15_05
-generated_by: Module::Build version 0.2807
-meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.2.html
-  version: 1.2
+distribution_type: module
+generated_by: Module::Install version 0.65
+license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
+name: Class-C3
+no_index: 
+  directory: 
+    - inc
+    - t
+version: 0.15_06
