--- a/META.yml
+++ b/META.yml
@@ -3,9 +3,12 @@ abstract: 'A pragma to use the C3 method resolution order algortihm'
 author:
   - 'Stevan Little, <stevan@iinteractive.com>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0.47
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.77'
+generated_by: 'Module::Install version 0.91'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -18,10 +21,10 @@ no_index:
 provides:
   Class::C3:
     file: lib/Class/C3.pm
-    version: 0.21
+    version: 0.22
 requires:
   Algorithm::C3: 0.06
   Scalar::Util: 1.10
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.21
+version: 0.22
