--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,14 @@ abstract: 'A pragma to use the C3 method resolution order algortihm'
 author:
   - 'Stevan Little, <stevan@iinteractive.com>'
 build_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::MakeMaker: 6.59
   Test::More: 0.47
 configure_requires:
-  ExtUtils::MakeMaker: 6.42
+  ExtUtils::CBuilder: 0.27
+  ExtUtils::MakeMaker: 6.59
 distribution_type: module
-generated_by: 'Module::Install version 0.99'
+dynamic_config: 1
+generated_by: 'Module::Install version 1.06'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,8 +21,9 @@ no_index:
     - inc
     - t
 requires:
-  Algorithm::C3: 0.06
-  Scalar::Util: 1.10
+  Algorithm::C3: 0.07
+  Scalar::Util: 0
+  perl: 5.6.2
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.23
+version: 0.23_01
