--- a/META.yml
+++ b/META.yml
@@ -3,25 +3,25 @@ abstract: 'A pragma to use the C3 method resolution order algorithm'
 author:
   - 'Stevan Little, <stevan@iinteractive.com>'
 build_requires:
-  Test::More: 0.47
+  Test::More: '0.47'
 configure_requires:
-  ExtUtils::CBuilder: 0.27
+  ExtUtils::CBuilder: '0.27'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.68, CPAN::Meta::Converter version 2.131560'
+generated_by: 'ExtUtils::MakeMaker version 6.9, CPAN::Meta::Converter version 2.133380'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Class-C3
 no_index:
   directory:
     - t
     - inc
 requires:
-  Algorithm::C3: 0.07
-  Scalar::Util: 0
+  Algorithm::C3: '0.07'
+  Scalar::Util: '0'
 resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Class-C3
   homepage: http://search.cpan.org/dist/Class-C3
   repository: git://git.shadowcat.co.uk/gitmo/Class-C3.git
-version: 0.25
+version: '0.26'
