--- a/META.yml
+++ b/META.yml
@@ -6,8 +6,9 @@ build_requires:
   Test::More: '0.47'
 configure_requires:
   ExtUtils::CBuilder: '0.27'
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.9, CPAN::Meta::Converter version 2.133380'
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.141520'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -16,12 +17,15 @@ name: Class-C3
 no_index:
   directory:
     - t
-    - inc
+    - xt
+    - opt
 requires:
   Algorithm::C3: '0.07'
   Scalar::Util: '0'
+  perl: '5.006'
 resources:
-  bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=Class-C3
-  homepage: http://search.cpan.org/dist/Class-C3
+  bugtracker: https://rt.cpan.org/Public/Dist/Display.html?Name=Class-C3
+  homepage: https://metacpan.org/release/Class-C3
+  license: http://dev.perl.org/licenses/
   repository: git://git.shadowcat.co.uk/gitmo/Class-C3.git
-version: '0.26'
+version: '0.27'
